<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">CABLUSH</string>

    <!-- Drawer Menu -->
    <string name="drawer_section_search">Buscar</string>
    <string name="drawer_section_my_places">Meus Locais</string>
    <string name="drawer_item_login_register">Login / Cadastro</string>
    <string name="drawer_item_stores">Lojas</string>
    <string name="drawer_item_events">Eventos</string>
    <string name="drawer_item_spots">Pistas</string>
    <string name="drawer_item_my_stores">Minhas Lojas</string>
    <string name="drawer_item_my_events">Meus Eventos</string>
    <string name="drawer_item_my_spots">Minhas Pistas</string>

    <!-- Buttons / Actions -->
    <string name="btn_send">Enviar</string>
    <string name="btn_cancel">Cancelar</string>
    <string name="btn_register">Cadastrar</string>
    <string name="btn_login">Logar</string>
    <string name="btn_login_google">Entrar com Google</string>
    <string name="com_facebook_loginview_log_in_button_long">Entrar com Facebook</string>
    <string name="btn_reset_password">Esqueci a Senha</string>
    <string name="btn_search">Buscar</string>
    <string name="btn_save">Salvar</string>
    <string name="btn_gallery">Galeria</string>
    <string name="btn_picture">Foto</string>
    <string name="btn_yes">Sim</string>
    <string name="btn_no">Não</string>

    <!--Login/Register -->
    <string name="title_login">Login</string>
    <string name="title_register">Novo Cadastro</string>
    <string name="title_reset_password">Solicitar Senha</string>
    <string name="txt_login_email">Entrar com Email</string>
    <string name="txt_name">Nome</string>
    <string name="txt_email">Email</string>
    <string name="txt_password">Senha</string>

    <!--Dialog Buscar -->
    <string name="title_search">Buscar %s</string>
    <string name="txt_by_sport">Por Esporte</string>
    <string name="txt_by_state">Por Estado</string>
    <string name="txt_by_name">Por Nome</string>

    <!-- Cadastros -->
    <string name="title_cadastrar">Cadastrar %s</string>
    <string name="txt_cadastrar">Cadastrar</string>
    <string name="txt_new_loja">Nova Loja</string>
    <string name="txt_new_evento">Novo Evento</string>
    <string name="txt_new_pista">Nova Pista</string>

    <!--Cadastros Local -->
    <string name="txt_site">Site</string>
    <string name="txt_telefone">Telefone</string>
    <string name="txt_facebook">Facebook</string>
    <string name="txt_logo">Logo</string>
    <string name="txt_descricao">Descrição</string>
    <string name="txt_logotipo">Logotipo</string>
    <string name="txt_foto">Tirar Foto</string>
    <string name="txt_galeria">Galeria de Fotos</string>
    <string name="txt_select_picture">Selecione uma foto</string>
    <string name="txt_select_location">Selecione o local no mapa.</string>

    <!-- Cadastros Evento -->
    <string name="txt_data_inicio">Data Inicio</string>
    <string name="txt_data_fim">Data Fim</string>
    <string name="txt_hora">Hora</string>
    <string name="txt_minuto">Minuto</string>
    <string name="txt_flyer">Flyer</string>
    <string name="txt_horario">Horário</string>

    <!-- Cadastros Horario Funcionamento -->
    <string name="txt_horarios">Horários</string>
    <string name="txt_dias">Dias</string>
    <string name="txt_inicio">Início</string>
    <string name="txt_fim">Fim</string>
    <string name="txt_detalhes">Detalhes</string>

    <string name="seg">S</string>
    <string name="ter">T</string>
    <string name="qua">Q</string>
    <string name="qui">Q</string>
    <string name="sex">S</string>
    <string name="sab">S</string>
    <string name="dom">D</string>

    <string-array name="dias_options">
        <item>Seg</item>
        <item>Ter</item>
        <item>Qua</item>
        <item>Qui</item>
        <item>Sex</item>
        <item>Sab</item>
        <item>Dom</item>
    </string-array>

    <!-- Cadastros Endereco -->
    <string name="txt_endereco">Endereço</string>
    <string name="txt_cep">CEP</string>
    <string name="txt_pais">País</string>
    <string name="txt_estado">Estado</string>
    <string name="txt_cidade">Cidade</string>
    <string name="txt_bairro">Bairro</string>
    <string name="txt_logradouro">Logradouro</string>
    <string name="txt_numero">Número</string>
    <string name="txt_complemento">Complemento</string>
    <string name="txt_localizacao">Localização</string>

    <!-- Tipos Locais -->
    <string name="txt_loja">Loja</string>
    <string name="txt_evento">Evento</string>
    <string name="txt_pista">Pista</string>

    <string-array name="cadastro_options">
        <item>Loja</item>
        <item>Evento</item>
        <item>Pista</item>
    </string-array>

    <string-array name="search_types">
        <item>Lojas</item>
        <item>Eventos</item>
        <item>Pistas</item>
    </string-array>

    <string name="empty_selection">Selecione&#8230;</string>

    <!-- Sports selection -->
    <string-array name="sports">
        <item>Selecione&#8230;</item>
        <item>Atletismo</item>
        <item>Automobilismo</item>
        <item>Bike</item>
        <item>Moto</item>
        <item>Patins</item>
        <item>Skate</item>
        <item>Outros</item>
    </string-array>

    <!-- States selection -->
    <string-array name="states">
        <item>Selecione&#8230;</item>
        <item>Acre</item>
        <item>Alagoas</item>
        <item>Amapá</item>
        <item>Amazonas</item>
        <item>Bahia</item>
        <item>Ceará</item>
        <item>Distrito Federal</item>
        <item>Espírito Santo</item>
        <item>Goiás</item>
        <item>Maranhão</item>
        <item>Mato Grosso</item>
        <item>Mato Grosso do Sul</item>
        <item>Minas Gerais</item>
        <item>Pará</item>
        <item>Paraíba</item>
        <item>Paraná</item>
        <item>Pernambuco</item>
        <item>Piauí</item>
        <item>Rio de Janeiro</item>
        <item>Rio Grande do Norte</item>
        <item>Rio Grande do Sul</item>
        <item>Rondônia</item>
        <item>Roraima</item>
        <item>Santa Catarina</item>
        <item>São Paulo</item>
        <item>Tocantins</item>
    </string-array>

    <!-- States values -->
    <string-array name="states_values">
        <item/>
        <item>AC</item>
        <item>AL</item>
        <item>AP</item>
        <item>AM</item>
        <item>BA</item>
        <item>CE</item>
        <item>DF</item>
        <item>ES</item>
        <item>GO</item>
        <item>MA</item>
        <item>MT</item>
        <item>MS</item>
        <item>MG</item>
        <item>PA</item>
        <item>PB</item>
        <item>PN</item>
        <item>PE</item>
        <item>PI</item>
        <item>RJ</item>
        <item>RN</item>
        <item>RS</item>
        <item>RO</item>
        <item>RR</item>
        <item>SC</item>
        <item>SP</item>
        <item>TO</item>
    </string-array>

    <!-- Mensagens de boas vindas -->
    <string name="success_login">Olá %s! Agora você pode compartilhar seus locais favoritos!</string>
    <string name="success_check_login">Bem vindo %s!</string>

    <!-- Mensagens de permissões -->
    <string name="ask_permissions_location">O Cablush utiliza a sua localização para sugerir locais onde praticar esportes com mais precisão.</string>
    <string name="ask_permissions_storage">O Cablush necessita permissão de escrita em seu dispositivo para salvar as fotos.</string>

    <!-- Mensagens de erro genéricas -->
    <string name="error_create_map">Error a carregar o mapa!</string>
    <string name="error_gps_not_working">Erro ao tentar obter local pelo GPS! Ligue-o e tente novamente.</string>
    <string name="error_no_connection">Erro ao conectar ao servidor, verifique sua conexão e tente novamente!</string>

    <!-- Mensagens de pesquisa -->
    <string name="msg_local_not_found">Nenhum local encontrado.</string>
    <string name="msg_search_off_line">Sem conexão, retornando dados em cache.</string>
    <string name="msg_search_error">Erro ao conectar ao servidor, retornando dados em cache.</string>

    <!-- Mensagens de cadastros -->
    <string name="msg_set_address_manually">Endereço não encontrado, prencha os dados manualmente.</string>
    <string name="msg_check_address">Endereço encontrado, confira os dados retornados.</string>
    <string name="msg_confirm_no_save">Descartar alterações não salvas?</string>
    <string name="msg_required">Campo obrigatório!</string>
    <string name="msg_select_one">Selecione pelo menos uma opção.</string>
    <string name="msg_invalid_web_url">Url inválida.</string>
    <string name="msg_invalid_phone">Número de telefone inválido.</string>
    <string name="msg_invalid_loja">Verifique os dados na aba loja!</string>
    <string name="msg_invalid_pista">Verifique os dados na aba pista!</string>
    <string name="msg_invalid_evento">Verifique os dados na aba evento!</string>
    <string name="msg_invalid_mapa">Selecione o local no mapa!</string>
    <string name="msg_invalid_local">Verifique os dados na aba endereço!</string>
    <string name="msg_invalid_horario">Verifique os dados na aba horários!</string>
    <string name="msg_save_on_line">Local salvo com sucesso!</string>
    <string name="msg_save_off_line">Sem conexão, local salvo em cache.</string>
    <string name="msg_save_error">Erro ao conectar ao servidor, local salvo em cache.</string>

    <!-- Mensagens de login e registro -->
    <string name="msg_register_missing_data">Preencha todos os campos.</string>
    <string name="msg_login_missing_data">Preencha email e senha.</string>
    <string name="msg_invalid_email">Email invalido.</string>
    <string name="msg_invalid_password">A senha deve possuir pelo menos 6 caracteres.</string>
    <string name="msg_reset_password_sent">Solicitação de nova enviada, verifique as instruções no seu email.</string>
    <string name="error_login">Erro ao realizar login! Tente novamente.</string>
    <string name="error_register">Erro ao realizar cadastro! Tente novamente.</string>
    <string name="msg_login_required">Faça login para continuar.</string>
    <string name="success_register">Cadastro realizado! Antes de fazer Login, confirme o cadastro no email que te enviamos!</string>
    <string name="error_login_facebook">Não foi possível logar no Facebook</string>
    <string name="error_login_google">Não foi possível logar no Google</string>

    <!-- Mensagens de fotos/galeria -->
    <string name="error_no_camera_found">Nenhuma camera encontrada neste dispositivo.</string>
    <string name="error_getting_picture">Erro ao obter foto.</string>
    <string name="error_loading_image">Erro ao carregar imagem.</string>

    <!-- Mensagens do serviço de localização -->
    <string name="error_no_location_data_provided">Localização não informada.</string>
    <string name="error_service_not_available">Serviço de busca de endereço não disponível.</string>
    <string name="error_invalid_lat_long_used">Localização inválida.</string>
    <string name="error_no_address_found">Endereço não encontrado.</string>
    <string name="msg_address_found">Endereço encontrado.</string>
    <string name="txt_periodo">Periodo</string>
    <string name="txt_hora_fim">Hora Fim</string>
    <string name="txt_hora_inicio">Hora Início</string>
    <string name="title_endereco">Endereço</string>
    <string name="title_evento">Evento</string>
    <string name="title_horario_funcionamento">Horário</string>

</resources>
