<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/scrollView"
    android:layout_alignParentTop="true"
    android:layout_alignParentStart="true">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white">

        <TextView
            style="@style/TextAppearance.Bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/txt_name"
            android:id="@+id/textViewNome"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginLeft="@dimen/dialog_margin"
            android:layout_marginRight="@dimen/dialog_margin"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="@string/txt_name"
            android:ems="10"
            android:id="@+id/editTextNome"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/textViewNome"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="@dimen/dialog_margin"
            android:layout_marginRight="@dimen/dialog_margin"/>

        <TextView
            style="@style/TextAppearance.Bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/txt_site"
            android:id="@+id/textViewWebsite"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginLeft="@dimen/dialog_margin"
            android:layout_marginRight="@dimen/dialog_margin"
            android:layout_marginTop="@dimen/vertical_spacing"
            android:layout_below="@+id/editTextNome" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/txt_site"
            android:ems="10"
            android:id="@+id/editTextWebsite"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/textViewWebsite"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="@dimen/dialog_margin"
            android:layout_marginRight="@dimen/dialog_margin"
            android:inputType="textUri"/>

        <TextView
            style="@style/TextAppearance.Bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/txt_facebook"
            android:id="@+id/textViewFacebook"
            android:layout_below="@+id/editTextWebsite"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginLeft="@dimen/dialog_margin"
            android:layout_marginRight="@dimen/dialog_margin"
            android:layout_marginTop="@dimen/vertical_spacing"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/txt_facebook"
            android:ems="10"
            android:id="@+id/editTextFacebook"
            android:layout_below="@+id/textViewFacebook"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_marginLeft="@dimen/dialog_margin"
            android:layout_marginRight="@dimen/dialog_margin"
            android:inputType="textUri"/>

        <TextView
            style="@style/TextAppearance.Bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/txt_logo"
            android:id="@+id/textViewLogo"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginLeft="@dimen/dialog_margin"
            android:layout_marginRight="@dimen/dialog_margin"
            android:layout_marginTop="@dimen/vertical_spacing"
            android:layout_below="@+id/editTextFacebook"/>

        <ImageButton
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_gallery"
            android:id="@+id/buttonGallery"
            android:layout_below="@+id/textViewLogo"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginLeft="@dimen/dialog_margin"
            android:src="@drawable/ic_action_ic_photo_blue"
            android:contentDescription="@string/txt_galeria"/>

        <ImageButton
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_picture"
            android:id="@+id/buttonPicture"
            android:layout_below="@+id/buttonGallery"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_toLeftOf="@+id/imageViewLogo"
            android:layout_toStartOf="@+id/imageViewLogo"
            android:layout_marginLeft="@dimen/dialog_margin"
            android:src="@drawable/ic_action_ic_camera_blue"
            android:contentDescription="@string/txt_foto"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageViewLogo"
            android:layout_toRightOf="@+id/buttonGallery"
            android:layout_toEndOf="@+id/buttonGallery"
            android:layout_marginLeft="@dimen/dialog_margin"
            android:contentDescription="@string/txt_logotipo"
            android:src="@drawable/missing"
            android:layout_marginRight="@dimen/dialog_margin"
            android:layout_alignTop="@+id/buttonGallery"/>

        <TextView
            style="@style/TextAppearance.Bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/txt_descricao"
            android:id="@+id/textViewDescricao"
            android:layout_below="@+id/imageViewLogo"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginLeft="@dimen/dialog_margin"
            android:layout_marginRight="@dimen/dialog_margin"
            android:layout_marginTop="@dimen/vertical_spacing"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:ems="10"
            android:id="@+id/editTextDescricao"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:hint="@string/txt_descricao"
            android:layout_below="@+id/textViewDescricao"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="@dimen/dialog_margin"
            android:layout_marginRight="@dimen/dialog_margin"/>

        <TextView
            style="@style/TextAppearance.Bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="Esportes"
            android:id="@+id/textViewEsportes"
            android:layout_alignParentBottom="false"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginLeft="@dimen/dialog_margin"
            android:layout_marginRight="@dimen/dialog_margin"
            android:layout_below="@+id/editTextDescricao"
            android:layout_marginTop="@dimen/vertical_spacing"/>

        <View style="@style/Divider"
            android:layout_below="@+id/textViewEsportes"
            android:layout_marginLeft="@dimen/dialog_margin"
            android:layout_marginRight="@dimen/dialog_margin"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <MultiAutoCompleteTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/multiAutoCompleteEsportes"
            android:layout_alignParentBottom="false"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/textViewEsportes"
            android:layout_marginLeft="@dimen/dialog_margin"
            android:layout_marginRight="@dimen/dialog_margin"
            android:layout_marginBottom="@dimen/dialog_margin"
            android:hint="@string/empty_selection"/>
    </RelativeLayout>
</ScrollView>